--- a/dillo/src/themes/dillo/styles/_notifications.sass
+++ b/dillo/src/themes/dillo/styles/_notifications.sass
@@ -68,8 +68,8 @@
 	#notifications-count
 		opacity: 0
 		position: absolute
-		top: 4px
-		right: 4px
+		top: -10px
+		right: 0
 		width: 18px
 		height: 18px
 		background-color: $color_brand_secondary
