--- a/dillo/src/themes/dillo/templates/layout.jade
+++ b/dillo/src/themes/dillo/templates/layout.jade
@@ -22,8 +22,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		| {% block og %}{% endblock %}
 
 		// Styles
-		link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css",rel="stylesheet")
-		link(href="//netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css", rel="stylesheet")
+		link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css",rel="stylesheet")
 		link(href="{{ url_for_theme_static('css/main.css') }}", rel="stylesheet")
 
 		// Fonts
@@ -49,7 +48,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 				| {{ message }}
 
 				button.close(type="button", data-dismiss="alert")
-					i.fa.fa-times
+					i.di-cancel
 
 		| {% endfor %}
 
@@ -77,12 +76,12 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 			.dialog__content
 				| {% include 'posts/form.html' %}
 				button.action.dialog__button-close(data-dialog-close)
-					i.fa.fa-times
+					i.di-cancel
 
 
 		// Javascript
 		script(src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js", type="text/javascript")
-		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js", type="text/javascript")
+		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", type="text/javascript")
 		script(src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js", type="text/javascript")
 		script(src="//cdn.embed.ly/jquery.embedly-3.1.1.min.js", type="text/javascript")
 		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.10/js/min/perfect-scrollbar.jquery.min.js", type="text/javascript")
