--- a/dillo/src/themes/dillo/templates/posts/form.jade
+++ b/dillo/src/themes/dillo/templates/posts/form.jade
@@ -15,7 +15,7 @@ form#submit_post_form(
 					data-role="button",
 					data-val="1")
 					.post-submit-field-type-button-icon
-						i.fa.fa-link
+						i.di-link
 
 					.post-submit-field-type-button-legend
 						span.post-submit-field-type-button-title
@@ -30,7 +30,7 @@ form#submit_post_form(
 					data-role="button",
 					data-val="2")
 					.post-submit-field-type-button-icon
-						i.fa.fa-file-text-o
+						i.di-text
 
 					.post-submit-field-type-button-legend
 						span.post-submit-field-type-button-title
@@ -44,7 +44,7 @@ form#submit_post_form(
 			.col-md-10.col-md-push-1
 				.form-group
 					.post-submit-field-favicon
-						i.fa.fa-globe
+						i.di-link
 
 					.post-submit-field-loading
 					| {{ submit_post_form.url(type='url', class='form-control post-submit-field-url', placeholder='Paste or type the URL here') }}
@@ -93,7 +93,7 @@ form#submit_post_form(
 			span.post-submit-div-picture-remote-overlay
 			.picture-remote-container
 			span#dismiss-picture-remote.dialog__button-close
-				i.fa.fa-times
+				i.di-cancel
 
 
 		.post-submit-div-submit
@@ -101,5 +101,5 @@ form#submit_post_form(
 				.col-md-6.col-md-push-3
 					button.btn.btn-default.btn-block.submit.post-submit-field-submit.disabled(
 						type="submit")
-						i.fa.fa-check
+						i.di-check
 						|  Submit!
