Fix: User page with First and Last name not specified displays None None
Fixes #8

--- a/dillo/src/themes/dillo/templates/users/view.jade
+++ b/dillo/src/themes/dillo/templates/users/view.jade
@@ -37,7 +37,7 @@ meta(property="profile:username", content="{{user.username}}")
 		.user-view-info
 
 			h3
-				| {% if user.first_name != 'None' %}
+				| {% if user.first_name and user.first_name != 'None' %}
 				| {{user.first_name}} {{user.last_name}}
 				small  ({{user.username}})
 				| {% else %}
