--- a/dillo/src/themes/dillo/styles/_font-icons.sass
+++ b/dillo/src/themes/dillo/styles/_font-icons.sass
@@ -1,7 +1,7 @@
 @font-face
-  font-family: 'dillo-font'
-  src: url('../font/dillo-font.eot?4490726')
-  src: url('../font/dillo-font.eot?4490726#iefix') format("embedded-opentype"), url('../font/dillo-font.woff2?4490726') format("woff2"), url('../font/dillo-font.woff?4490726') format("woff"), url('../font/dillo-font.ttf?4490726') format("truetype"), url('../font/dillo-font.svg?4490726#dillo-font') format("svg")
+  font-family: 'font-icons'
+  src: url('../font/font-icons.eot?6239040')
+  src: url('../font/font-icons.eot?6239040#iefix') format("embedded-opentype"), url('../font/font-icons.woff2?6239040') format("woff2"), url('../font/font-icons.woff?6239040') format("woff"), url('../font/font-icons.ttf?6239040') format("truetype"), url('../font/font-icons.svg?6239040#font-icons') format("svg")
   font-weight: normal
   font-style: normal
 
@@ -11,13 +11,13 @@
 /*
  *@media screen and (-webkit-min-device-pixel-ratio:0) {
  *  @font-face {
- *    font-family: 'dillo-font';
- *    src: url('../font/dillo-font.svg?4490726#dillo-font') format('svg');
+ *    font-family: 'font-icons';
+ *    src: url('../font/font-icons.svg?6239040#font-icons') format('svg');
  *  }
  *}
 
 [class^="di-"]:before, [class*=" di-"]:before
-  font-family: "dillo-font"
+  font-family: "font-icons"
   font-style: normal
   font-weight: normal
   speak: none
@@ -78,12 +78,12 @@
 
 /* ''
 
-.di-log-in:before
+.di-link-ext:before
   content: '\e807'
 
 /* ''
 
-.di-log-out:before
+.di-cog:before
   content: '\e808'
 
 /* ''
@@ -168,20 +168,10 @@
 
 /* ''
 
-.di-cog:before
-  content: '\e819'
-
-/* ''
-
 .di-angle-up:before
   content: '\e81a'
 
 /* ''
-
-.di-link-ext:before
-  content: '\e81b'
-
-/* ''
 
 .di-fire:before
   content: '\e81c'
@@ -303,20 +293,10 @@
 
 /* ''
 
-.di-notifications-active:before
+.di-log-out:before
   content: '\e834'
 
 /* ''
-
-.di-notifications-off:before
-  content: '\e835'
-
-/* ''
-
-.di-notifications-none:before
-  content: '\e836'
-
-/* ''
 
 .di-email:before
   content: '\e837'
@@ -487,3 +467,18 @@
   content: '\e858'
 
 /* ''
+
+.di-notifications-none:before
+  content: '\e859'
+
+/* ''
+
+.di-notifications-active:before
+  content: '\e85a'
+
+/* ''
+
+.di-notifications-off:before
+  content: '\e85b'
+
+/* ''
