Fix for lost FontAwesome icons

--- a/dillo/src/themes/dillo/styles/plugins/_cd-dropdown.sass
+++ b/dillo/src/themes/dillo/styles/plugins/_cd-dropdown.sass
@@ -32,8 +32,8 @@
 
 
 .cd-dropdown > span:after
-	content: '\f107'
-	font-family: 'FontAwesome'
+	content: '\e82c'
+	font-family: 'font-icons'
 	position: absolute
 	right: 15px
 	+transition(transform, 0.3s, ease)
