--- a/dillo/src/themes/dillo/styles/plugins/_swipebox.sass
+++ b/dillo/src/themes/dillo/styles/plugins/_swipebox.sass
@@ -12,8 +12,8 @@
 	font-size: 1.3em
 
 a#swipebox-close:after
-	content: '\f00d'
-	font-family: 'FontAwesome'
+	content: '\e80f'
+	font-family: 'font-icons'
 	color: $color_brand_main
 	position: absolute
 	right: 30px
